<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/toolbar_background"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/notification_title"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_activity_container"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="InvalidId">

        <TextView
            android:id="@+id/notification_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_me_where_i_eat"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:switchMinWidth="60dp"
            android:checked="false"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:textOff="@string/off"
            android:textOn="@string/on"/>

    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="#A9A9A9"/>

</LinearLayout>