<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity_CoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <!-- MAIN CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@drawable/lunchbackground"
        android:orientation="vertical">

        <ImageView
            android:layout_width="260dp"
            android:layout_height="210dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="-25dp"
            android:background="@drawable/soupbowl" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/Go4Lunch"
            android:textColor="@color/colorWhite"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/MainTextview"
            android:textColor="@color/colorWhite"
            android:textSize="11sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:textAllCaps="false"
            android:id="@+id/mainActivity_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:drawableStart="@drawable/baseline_perm_identity_black_24"
            android:drawableTint="@color/colorWhite"
            android:background="@drawable/button_login"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:text="@string/login_password"
            tools:targetApi="m" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/mainActivity_facebook_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/ic_facebook_32x32"
            android:padding="5dp"
            android:background="@drawable/button_facebook_radius_primary_color"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:text="@string/facebook_button"/>

        <Button
            android:textAllCaps="false"
            android:id="@+id/mainActivity_twitter_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:drawableStart="@drawable/ic_twitter_32x32"
            android:background="@drawable/button_twitter_radius_primary_color"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:text="@string/sign_in_with_twitter"
            tools:targetApi="m" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/mainActivity_google_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:drawableStart="@drawable/ic_google_plus"
            android:background="@drawable/button_google_radius_primary_color"
            android:padding="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:text="@string/google_button" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>